--- a/MyGraphics/Base.lproj/Main.storyboard
+++ b/MyGraphics/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="mch-Dh-mSR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="mch-Dh-mSR">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -30,6 +30,7 @@
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8jA-A3-vvF">
                                             <rect key="frame" x="9" y="9" width="140" height="144"/>
+                                            <gestureRecognizers/>
                                         </imageView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ndk-Cg-Ulp">
                                             <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
@@ -86,10 +87,18 @@
                                     <segue destination="ydw-Iz-czm" kind="show" id="BR6-7A-3yc"/>
                                 </connections>
                             </barButtonItem>
+                            <barButtonItem systemItem="action" id="rhV-m1-DAN">
+                                <connections>
+                                    <segue destination="7pl-wt-vmz" kind="popoverPresentation" popoverAnchorBarButtonItem="rhV-m1-DAN" id="OVp-J7-MFo">
+                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                    </segue>
+                                </connections>
+                            </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="deleteButton" destination="G4G-Kg-UvY" id="GgH-If-82O"/>
+                        <outlet property="shareButton" destination="rhV-m1-DAN" id="UnT-cU-0RI"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dfe-eA-4uA" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -115,6 +124,56 @@
             </objects>
             <point key="canvasLocation" x="430" y="1048"/>
         </scene>
+        <!--Share List Table View Controller-->
+        <scene sceneID="wLG-ff-uf4">
+            <objects>
+                <tableViewController storyboardIdentifier="shareTableViewController" modalPresentationStyle="formSheet" useStoryboardIdentifierAsRestorationIdentifier="YES" id="7pl-wt-vmz" customClass="ShareListTableViewController" customModule="MyGraphics" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="uPL-vE-oYW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="separatorColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="shareListCell" id="LAS-Nf-3AN" customClass="ShareListTableViewCell" customModule="MyGraphics" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LAS-Nf-3AN" id="AUn-h1-fuW">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Dr-xV-AMq">
+                                            <rect key="frame" x="8" y="11" width="304" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.26380360310000001" green="0.56889525159999998" blue="0.84266493060000003" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="3Dr-xV-AMq" firstAttribute="leading" secondItem="AUn-h1-fuW" secondAttribute="leadingMargin" id="2qb-vo-q4W"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="3Dr-xV-AMq" secondAttribute="bottom" constant="3" id="Wix-NH-0bP"/>
+                                        <constraint firstItem="3Dr-xV-AMq" firstAttribute="trailing" secondItem="AUn-h1-fuW" secondAttribute="trailingMargin" id="Xzp-5B-Cfh"/>
+                                        <constraint firstItem="3Dr-xV-AMq" firstAttribute="top" secondItem="AUn-h1-fuW" secondAttribute="topMargin" constant="3" id="Zra-0D-3fd"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="cellLabel" destination="3Dr-xV-AMq" id="RHA-gU-yBs"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="7pl-wt-vmz" id="BpD-Ui-Hp7"/>
+                            <outlet property="delegate" destination="7pl-wt-vmz" id="SHw-97-dhg"/>
+                        </connections>
+                    </tableView>
+                    <value key="contentSizeForViewInPopover" type="size" width="200" height="88"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="320" height="480"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="u5z-dK-mzN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1676" y="866"/>
+        </scene>
         <!--Passcode Settings Table View Controller-->
         <scene sceneID="MPJ-lN-Wq4">
             <objects>
@@ -123,8 +182,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="separatorColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cycleCell" id="1Bg-T3-Lai" customClass="CycleTableViewCell" customModule="MyGraphics" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="checkMarkCell" id="1Bg-T3-Lai" customClass="CycleTableViewCell" customModule="MyGraphics" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1Bg-T3-Lai" id="W1v-cJ-jsD">
@@ -134,7 +194,7 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="cycle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gp6-Do-bcg">
                                             <rect key="frame" x="16" y="11" width="235" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -158,13 +218,13 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bBF-g7-KMI">
-                                            <rect key="frame" x="543" y="6" width="51" height="31"/>
+                                            <rect key="frame" x="533" y="6" width="51" height="31"/>
                                         </switch>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="bBF-g7-KMI" firstAttribute="top" secondItem="kV5-kr-DqA" secondAttribute="topMargin" constant="-2" id="KE5-12-Y8B"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="bBF-g7-KMI" secondAttribute="bottom" constant="-2" id="h32-Ce-WuI"/>
-                                        <constraint firstItem="bBF-g7-KMI" firstAttribute="trailing" secondItem="kV5-kr-DqA" secondAttribute="trailingMargin" id="rPf-C7-0hN"/>
+                                        <constraint firstItem="bBF-g7-KMI" firstAttribute="trailing" secondItem="kV5-kr-DqA" secondAttribute="trailingMargin" constant="-10" id="rPf-C7-0hN"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <gestureRecognizers/>
@@ -182,7 +242,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8mA-fc-jc8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1790" y="1048"/>
+            <point key="canvasLocation" x="1816" y="1491"/>
         </scene>
     </scenes>
     <resources>
